--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^7.1.4",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
