--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "previewjs",
-  "version": "1.0.0",
+  "version": "1.0.4",
   "description": "a plugin to preview the images",
-  "main": "dist/main.js",
+  "main": "./dist/main.js",
   "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^7.1.4",
